--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <input type="text" name="ListItem" id="input" />
       </form>
 
-      <div onclick="newItem()" id="button">Add</div>
+      <div id="button">Add</div>
       <br />
       <ol id="list"></ol>
     </div>
@@ -34,6 +34,6 @@
       integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30="
       crossorigin="anonymous"
     ></script>
-    <script src="script.js"></script>
+    <script src="js/scripts.js"></script>
   </body>
 </html>
