added a link to jquery.lint.js for jquery linting

--- a/index.html
+++ b/index.html
@@ -35,5 +35,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="js/scripts.js"></script>
+    <script src="jquery.js"></script>
+    <script src="jquery.lint.js"></script>
   </body>
 </html>
